# rail-drone-inspection-sim

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: static-validation.yml
data/datasets/rail_defects_yolo/: README.md  data.yaml
data/missions/: default_corridor_profile.json
data/scenarios/: default_synthetic_faults.json
docker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  DEMO_SCRIPT_CN.md  HOST_CHECK_2026-06-07.md  REQUIREMENTS_TRACE.md  USAGE_CN.md
ros2_ws/src/ddrone_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/ddrone_msgs/msg/: Alert.msg  Detection.msg  DroneTelemetry.msg  MissionState.msg
ros2_ws/src/rail_inspection_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/rail_inspection_bringup/launch/: full_sim.launch.py  offline_demo.launch.py
ros2_ws/src/rail_inspection_bringup/rviz/: rail_inspection.rviz
ros2_ws/src/rail_inspection_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/rail_inspection_control/rail_inspection_control/: mission_manager.py  runtime_info_publisher.py
ros2_ws/src/rail_inspection_dashboard/: package.xml  setup.cfg  setup.py
ros2_ws/src/rail_inspection_dashboard/rail_inspection_dashboard/: web_dashboard.py
ros2_ws/src/rail_inspection_dashboard/rail_inspection_dashboard/static/: app.js  index.html  styles.css
ros2_ws/src/rail_inspection_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/rail_inspection_gazebo/worlds/: high_speed_rail_corridor.sdf
ros2_ws/src/rail_inspection_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/rail_inspection_perception/rail_inspection_perception/: fault_catalog.py  synthetic_scene_publisher.py  yolo_detector.py
ros2_ws/src/rail_inspection_report/: package.xml  setup.cfg  setup.py
ros2_ws/src/rail_inspection_report/rail_inspection_report/: report_generator.py  report_templates.py
ros2_ws/src/rail_inspection_rl/: package.xml  setup.cfg  setup.py
ros2_ws/src/rail_inspection_rl/rail_inspection_rl/: env.py  evaluate.py
scripts/: acceptance_full_sim.md  acceptance_full_sim.ps1  acceptance_offline.ps1  build.ps1  build_wsl.sh  check_acceptance_artifacts.py  dataset_check.py  demo_menu.ps1  doctor.ps1  download_yolo_weights.ps1  export_evidence.ps1  install_to_target.ps1  local_smoke.py  mission_profile_check.py  model_check.py  open_dashboard.ps1  preflight.ps1  report_smoke.py  rl_smoke.py  scenario_check.py  shell.ps1  start_docker_desktop.ps1  start_full_sim.ps1  start_offline_demo.ps1  static_check.py  status.ps1  stop_sim.ps1  verify_local.ps1
