<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rail_inspection_bringup</name>
  <version>0.1.0</version>
  <description>Launch and visualization configuration for the drone railway inspection stack.</description>
  <maintainer email="ops@example.com">Drone Rail Inspection Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rail_inspection_control</exec_depend>
  <exec_depend>rail_inspection_dashboard</exec_depend>
  <exec_depend>rail_inspection_gazebo</exec_depend>
  <exec_depend>rail_inspection_perception</exec_depend>
  <exec_depend>rail_inspection_report</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
